--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "cheerio": "^0.20.0",
     "express": "^4.14.0",
     "messenger-bot": "^2.3.0",
     "request": "^2.72.0"
