--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Tuan Tran <tuantranf@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "async": "^2.0.0-rc.6",
     "body-parser": "^1.15.2",
     "cheerio": "^0.20.0",
     "express": "^4.14.0",
