--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cheerio": "^0.20.0",
     "express": "^4.14.0",
     "messenger-bot": "^2.3.0",
+    "node-wit": "^4.0.0",
     "request": "^2.72.0"
   }
 }
